--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,21 @@
-h1, h2, h3, h4, h5, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
   font-family: helvetica;
   color: #3e3e3e;
+}
+
+#watch-description-container {
+  display: flex;
+  flex-direction: column;
+}
+
+#watch-container {
+  display: flex;
+  flex-direction: row;
 }
 
 .description {
@@ -8,7 +23,7 @@ h1, h2, h3, h4, h5, p {
   color: #9e9e9e;
 }
 
-.awful-selfie{
+.awful-selfie {
   background: url(../img/bg.jpg);
   width: 300px;
   height: 300px;
