--- a/views/index.jade
+++ b/views/index.jade
@@ -19,3 +19,4 @@ head
     #recommended-watch-options-container
       each program in programs
         div= program.title
+        img(src=program.image)
