Add questionaire form + videos

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,8 +3,10 @@ head
   meta(charset='utf-8')
   title= title
   link(rel='shortcut icon' href='#')
+  link(rel='stylesheets/style.css' href='#')
 #watch-container
   iframe(width='560' height='315' src='https://www.youtube.com/embed/UFIoRLqhFpo' frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+  #ad-container
   #watch-description-container
     #title= title
     p#upload-date Gisteren 20:55 &bull; EO &bull; 40 min
