--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,65 @@ p {
   color: #9e9e9e;
 }
 
-.awful-selfie {
-  background: url(../img/bg.jpg);
-  width: 300px;
-  height: 300px;
-  background-size: 100% auto;
-  background-repeat: no-repeat;
+video {
+  z-index: 0;
+}
+
+#video_box {
+  float: left;
+}
+#video_advertisement {
+  position: absolute;
+  float: left;
+  width: 640px;
+  min-height: 370px;
+  background-color: #fff;
+  z-index: 300000;
+  border: 1px solid black;
+}
+
+.question-section {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.question-section label {
+  font-size: 16px;
+  font-weight: bold;
+  display: block;
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none; /* Override default CSS styles */
+  appearance: none;
+  width: 100%; /* Full-width */
+  height: 25px; /* Specified height */
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: 0.2s; /* 0.2 seconds transition on hover */
+  transition: opacity 0.2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #4caf50; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #4caf50; /* Green background */
+  cursor: pointer; /* Cursor on hover */
 }
